test/Fail/Sigma-syntax-5.agda
{-# OPTIONS --erasure #-}

open import Agda.Builtin.Sigma

postulate
  _ : (@0 A : Set) (x) Set
